Rename to IntegrationTest; IDEA Debugging support